add addItem endpoint with docs
