# src/Controller/BasketController.php
@@ -3,9 +3,14 @@
 namespace App\Controller;
 
 use App\Entity\Basket;
+use App\Repository\BasketItemRepository;
+use App\Repository\BasketRepository;
+use App\Repository\ProductRepository;
 use App\Service\BasketService;
+use Doctrine\ORM\EntityManagerInterface;
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
 use Symfony\Component\HttpFoundation\JsonResponse;
+use Symfony\Component\HttpFoundation\Request;
 use Symfony\Component\HttpFoundation\Response;
 use Symfony\Component\Routing\Attribute\Route;
 
@@ -21,7 +26,7 @@ final class BasketController extends AbstractController
 
         return $this->json(
             [
-                'id'        => $basket->getId(),
+                'id' => $basket->getId(),
                 'createdAt' => $basket->getCreatedAt()->format(DATE_ATOM),
             ],
             Response::HTTP_CREATED,
@@ -34,9 +39,45 @@ final class BasketController extends AbstractController
     public function getOne(Basket $basket): JsonResponse
     {
         return $this->json([
-            'id'        => $basket->getId(),
+            'id' => $basket->getId(),
             'createdAt' => $basket->getCreatedAt()->format(DATE_ATOM),
-            'items'     => [], // TODO fill later when items exist
+            'items' => $basket->getItems()->toArray(),
         ]);
+    }
+
+    #[Route('/api/baskets/{id}/items', name: 'api_baskets_items_add', methods: ['POST'])]
+    public function addItem(
+        int                    $id,
+        Request                $request,
+        ProductRepository      $products,
+        BasketRepository       $baskets,
+        BasketItemRepository   $basketItemRepository,
+        EntityManagerInterface $entityManager): JsonResponse
+    {
+        $requestData = $request->toArray();
+        $productId = $requestData['productId'];
+        $amount = $requestData['amount'] ?? 1;
+
+        $productToAdd = $products->find($productId);
+        $basket = $baskets->find($id);
+
+        if (!$basket) {
+            return $this->json(['error' => 'basket not found'], 404);
+        }
+
+        if (!$productToAdd) {
+            return $this->json(['error' => 'product not found'], 404);
+        }
+
+        $basketItem = $basketItemRepository->createByProduct($productToAdd, $amount);
+
+        // only persist if a new line was actually added. Else, quantity was just updated.
+        $line = $basket->addItem($basketItem);
+        if ($line->getId() === null) {
+            $entityManager->persist($line);
+        }
+        $entityManager->flush();
+
+        return $this->json($basket->toArray());
     }
 }
